[package]
name = "Parallel-Nova-BLS-Verification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bellperson = { version = "0.24", default-features = false }
byteorder = "1.4.3"
ff = { version = "0.12", features = ["derive"]}
hex-literal = "0.3.4"
itertools = "0.9.0"
#nova scotia and nova snark libs are in my github
custom-nova-scotia = {path = "../customnovascotialib" }
nova-snark = {path = "../paranova-lib" }
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
pasta_curves = { version = "0.5.2", features = ["repr-c", "serde"], package = "fil_pasta_curves" }
serde = "1.0"
serde_json = "1.0.85"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"]}
rayon = "1.3.0"
wasm-bindgen-rayon = { version = "1.0"}
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[features]
default = []
cuda = ["nova-snark/cuda"]
opencl = ["nova-snark/opencl"]